Fixed input overflow on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -731,14 +731,6 @@ video {
   width: 3.5rem !important;
 }
 
-.w-6\/12 {
-  width: 50% !important;
-}
-
-.w-9\/12 {
-  width: 75% !important;
-}
-
 .w-8\/12 {
   width: 66.666667% !important;
 }
